--- a/dvm-server/package.json
+++ b/dvm-server/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "exceljs": "^3.7.0",
-    "file-system": "^2.2.2",
+    "body-parser": "^1.19.0",
+    "exceljs": "3.7.0",
+    "express": "4.17.1",
+    "express-fileupload": "1.2.1",
+    "file-system": "2.2.2",
+    "fileupload": "1.0.0",
     "path": "^0.12.7",
     "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
